@@ -1,16 +1,18 @@
 Short list for 3.2:
 
+  first change logic is broken: search & replace can change the file.  (look
+  at Read Only logic).
+
+  exemac for first change: it should be run with cursor in window.
+
   -orphan will break -mnew, -mold macros (because macros are run without a
 window on the screen).
 
 - - - - - - - -
 
-- if file is read only, check it out (p4 edit).
-    - automatically?
-    - execute macro on typing in read-only file?
-
 - arch/tla wants the editor to break hardlinks on save.  This
-  should be an option in joe (unlink, then write).
+  should be an option in joe (unlink, then write).  Have to deal with
+  security mess.
 
 - - - - - - - -
 
@@ -25,14 +27,11 @@ window on the screen).
 
 - - - - - - - -
 
-- document magic variables in math mode
-
 - document some things which are in joerc file: like yank, and switch buffers.
 
 - update help screens: some things have changed (emacs is more like emacs).
 
 - update man page
-- update NEWS
 
 - for cygwin: we need to compile with --disable-termcap
 
