@@ -205,6 +205,7 @@ CMD cmds[] = {
 	{US "stop", TYPETW + TYPEPW + TYPEMENU + TYPEQW, ustop, NULL, 0, NULL},
 	{US "swap", TYPETW + TYPEPW + EFIXXCOL, uswap, NULL, 0, NULL},
 	{US "switch", TYPETW + TYPEPW, uswitch, NULL, 0, NULL},
+	{US "sys", TYPETW + TYPEPW, usys, NULL, 0, NULL },
 	{US "tabmenu", TYPEMENU, umtab, NULL, 1, US "ltarwmenu"},
 	{US "tag", TYPETW + TYPEPW, utag, NULL, 0, NULL},
 	{US "toggle_marking", TYPETW + TYPEPW, utoggle_marking, NULL, 0, NULL},
@@ -313,6 +314,11 @@ int execmd(CMD *cmd, int k)
 
 	/* We are about to modify the file */
 	if ((maint->curwin->watom->what & TYPETW) && (cmd->flag & EMOD)) {
+		if (!bw->b->didfirst) {
+			bw->b->didfirst = 1;
+			if (bw->o.mfirst)
+				exmacro(bw->o.mfirst,1);
+		}
 		if (bw->b->rdonly) {
 			msgnw(bw->parent, US "Read only");
 			if (beep)
